# notebook2script

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  git_helper.yml  lint_roller.sh  make_conda_recipe.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.ci/: copy_pypi_2_github.py  travis_build_conda.sh  travis_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Building.rst  Source.rst  api.rst  conf.py  contributing.rst  docs.rst  index.rst  license.rst  requirements.txt  usage.rst
doc-source/_templates/sidebar/: navigation.html
notebook2script/: __init__.py  __main__.py  conf.py  ipynb2py.py  pointless.py  requirements.txt
notebook2script/pointless_checker/: __init__.py  base.py
tests/: example_notebook.ipynb  test_cli.py  test_cli.sh  test_notebook2script.py  test_pointless_checker.py
tests/test_pointless_checker_/: test_pointless_checker._py_
