[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "notebook2script"
version = "0.2.1"
description = "Convert Jupyter Notebooks to Python Scripts."
readme = "README.rst"
keywords = [ "jupyter-notebook", "utility", "converter",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/PyMassSpec/notebook2script"
"Issue Tracker" = "https://github.com/PyMassSpec/notebook2script/issues"
"Source Code" = "https://github.com/PyMassSpec/notebook2script"
Documentation = "https://notebook2script.readthedocs.io/en/latest"

[project.scripts]
notebook2script = "notebook2script.__main__:main"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "GPL-2.0-only"
additional-files = [ "include notebook2script/isort.cfg", "include notebook2script/style.yapf",]
